# libchai

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  config.md  crates.js  dl1.txt  dl2.txt  download.sh  fetch.ps1  fetch.sh  help.html  search-index.js  settings.html  src-files.js
.cargo/: config
.github/workflows/: commit.yml  release.yml
benches/: benchmark.rs
chai/: all.html  constant.最大元素编码长度.html  constant.最大按键组合长度.html  constant.最大词长.html  enum.命令.html  enum.消息.html  fn.validate.html  fn.元素标准名称.html  index.html  sidebar-items.js  struct.Web.html  struct.WebApi.html  struct.原始可编码对象.html  struct.可编码对象.html  struct.命令行.html  struct.命令行参数.html  struct.图形界面参数.html  struct.数据参数.html  struct.棱镜.html  struct.码表项.html  struct.编码信息.html  struct.部分编码信息.html  struct.错误.html  struct.键位分布损失函数.html  trait.界面.html  type.元素.html  type.元素图.html  type.元素序列.html  type.元素映射.html  type.原始当量信息.html  type.原始键位分布信息.html  type.当量信息.html  type.指法向量.html  type.正则化.html  type.编码.html  type.自动上屏.html  type.键.html  type.键位分布信息.html
chai/config/: enum.BoxConfig.html  enum.Draw.html  enum.Glyph.html  enum.Mapped.html  enum.MappedKey.html  enum.Rule.html  enum.ShortCodeConfig.html  enum.SolverConfig.html  enum.Stroke.html  enum.WordRule.html  enum.区块配置.html  enum.字形.html  enum.安排.html  enum.广义码位.html  enum.构词规则.html  enum.求解器配置.html  enum.笔画.html  enum.简码规则.html  enum.绘制.html  enum.节点.html  enum.运算规则.html  index.html  sidebar-items.js  struct.AffinityList.html  struct.Analysis.html  struct.AtomicConstraint.html  struct.Block.html  struct.CodableObjectConfig.html  struct.CompoundParameters.html  struct.Condition.html  struct.ConstraintsConfig.html  struct.Data.html  struct.Degenerator.html  struct.DiagramConfig.html  struct.EdgeConfig.html  struct.ElementAffinityEntry.html  struct.ElementAffinityTarget.html  struct.ElementWithIndex.html  struct.EncoderConfig.html  struct.FormConfig.html  (+48 more)
chai/contexts/: fn.合并初始决策.html  fn.展开变量.html  fn.应用生成器.html  fn.拓扑排序.html  index.html  sidebar-items.js  struct.条件.html  struct.条件安排.html  trait.上下文.html
chai/data/: constant.最大按键组合长度.html  constant.最大词长.html  index.html  sidebar-items.js  struct.原始可编码对象.html  struct.可编码对象.html  struct.数据.html  struct.码表项.html  struct.编码信息.html  struct.部分编码信息.html  struct.键位分布损失函数.html  type.元素.html  type.元素序列.html  type.元素映射.html  type.原始当量信息.html  type.原始键位分布信息.html  type.当量信息.html  type.指法向量.html  type.正则化.html  type.用指标记.html  type.编码.html  type.自动上屏.html  type.键.html  type.键位分布信息.html
chai/encoders/: index.html  sidebar-items.js  struct.简码配置.html  struct.编码空间.html  struct.编码配置.html  trait.编码器.html
chai/interfaces/: enum.消息.html  index.html  sidebar-items.js  struct.默认输入.html  trait.界面.html
chai/objectives/: index.html  sidebar-items.js  trait.目标函数.html
chai/operators/: index.html  sidebar-items.js  trait.变异.html  trait.杂交.html
chai/optimizers/: index.html  sidebar-items.js  static.全局计时器.html  struct.优化结果.html  struct.优化问题.html  struct.计时器.html  trait.优化方法.html  trait.决策.html  trait.解特征.html
chai/server/: enum.ApiResponse.html  enum.OptimizationStatus.html  fn.create_app.html  fn.encode_evaluate.html  fn.get_optimization_status.html  fn.index.html  fn.sse_handler.html  fn.start_optimize.html  fn.start_server.html  fn.sync_params.html  fn.validate_config.html  index.html  sidebar-items.js  struct.AppState.html  struct.OptimizationStatus.html
chai/web_api/: index.html  sidebar-items.js  struct.WebApi.html
search.desc/chai/: chai-desc-0-.js
search.desc/server/: server-desc-0-.js
search.index/: 000b41de327b.js  0061111c0a52.js  00c8177866de.js  0130eb9c0171.js  0156bd00695b.js  015f9184feb4.js  0164c9326409.js  024c3f05e83c.js  02cff3ae4cab.js  02ddb3ac1e76.js  02f51f7340be.js  03022ff445f6.js  0323ee843c4c.js  0341c0cf609a.js  03717373493b.js  03a7add8fda2.js  03caf13fdaf7.js  03cd074e4cee.js  03f49d952a42.js  041b4e3e39f2.js  048b3bda45c2.js  04c2af7e4142.js  0504c1fe20c2.js  0516e29f53f9.js  05652121b01d.js  056f774649ba.js  0595df20c52e.js  0597cb6cdc4f.js  05cc7354d15a.js  05e727727608.js  0606a261328d.js  06260402df03.js  064fdf7b4081.js  066f15951b78.js  06a7c380254e.js  06ae28d63865.js  0749b4e0c2ae.js  079b52d386fc.js  07bc560521d6.js  085e387bdb82.js  (+634 more)
search.index/crateNames/: 5c1566ae3cd0.js  eab540fa80d2.js
search.index/desc/: 051a0da2d0ba.js  4cdb6f23b85f.js  5651f665684c.js  98212c9c6ec0.js  e09e55fa914e.js
search.index/entry/: 257eee9dd9e7.js  3f43029a8b93.js  4647f56046cb.js  667c69110405.js  87e7c4acd64f.js  d8238824523c.js  dda7618ee736.js
search.index/function/: 18acfd7fbd02.js  68a47abd80a8.js  83ea0c2473ab.js  ae984cf9945b.js  dbc755a143aa.js  fa3f3bbfff86.js  ff3c6b7fa5f1.js
search.index/generic_inverted_index/: 02aa053c8400.js  8fbd514f68b1.js  ab3541731faa.js  (+4 more)
server/: all.html  enum.ApiResponse.html  fn.create_app.html  fn.encode_evaluate.html  fn.get_optimization_status.html  fn.index.html  fn.main.html  fn.start_optimize.html  fn.start_server.html  fn.sync_params.html  fn.validate_config.html  index.html  sidebar-items.js  struct.AppState.html  struct.OptimizationStatus.html
src/: assets.rs  cli.rs  config.rs  constraints.rs  data.rs  encoder.rs  error.rs  interface.rs  io.rs  lib.rs  main.rs  metaheuristics.rs  metric.rs  metrics.rs  mutators.rs  objective.rs  objectives.rs  problem.rs  representation.rs  server.rs
tests/: integration_tests.rs
(+198 files in other folders)
