[package]
name = "libchai"
version = "0.2.6"
authors = ["Songchen Tan <i@tansongchen.com>"]
edition = "2018"
license = "GPL-3.0"
description = "汉字编码优化算法"
homepage = "https://chaifen.app"
documentation = "https://lib.chaifen.app"
repository = "https://github.com/hanzi-chai/libchai"
readme = "README.md"

[[bin]]
name = "chai"
path = "src/main.rs"

[lib]
name = "chai"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
strip = true

[profile.benchmark]
inherits = "dev"
opt-level = 3

[dependencies]
rand = "0.9.1"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
serde_with = "3.4.0"
csv = "1.3.0"
regex = "1.10.2"
rustc-hash = "2.0.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.66"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6.3"
tsify = { version = "0.4.5", features = ["js"] }
web-time = "1.1.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
