[package]
name = "libchai"
version = "0.3.2"
authors = ["Songchen Tan <i@tansongchen.com>"]
edition = "2018"
license = "GPL-3.0"
description = "汉字编码优化算法"
homepage = "https://chaifen.app"
documentation = "https://lib.chaifen.app"
repository = "https://github.com/hanzi-chai/libchai"
readme = "README.md"
default-run = "chai"

[[bin]]
name = "chai"
path = "src/main.rs"
required-features = ["server"]

[lib]
name = "chai"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "server"]
server = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:futures-util", "dep:async-stream", "dep:uuid"]

[profile.release]
strip = true

[profile.benchmark]
inherits = "dev"
opt-level = 3

[dependencies]
rand = { version = "0.10" }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0"
serde_with = "3.4.0"
csv = "1.3.0"
regex = "1.10.2"
rustc-hash = "2.0.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.66"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6.3"
tsify = { version = "0.5.5", features = ["js"] }
web-time = "1.1.0"
itertools = "0.14.0"
indexmap = { version = "2.10.0", features = ["serde"] }

# server dependencies
axum = { version = "^0.8.8", features = ["macros"], optional = true }
tokio = { version = "^1.0", features = ["full"], optional = true }
tower = { version = "^0.5", optional = true }
tower-http = { version = "^0.6.8", features = ["cors", "fs", "timeout"], optional = true }
tracing = { version = "^0.1", optional = true }
tracing-subscriber = { version = "^0.3", optional = true }
futures-util = { version = "^0.3.31", optional = true }
async-stream = { version = "^0.3", optional = true }
uuid = { version = "^1.17.0", features = ["v4"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
